[package]
name = "const-alg"
version = "0.1.0"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = '0.2.0'
cfg-if = '0.1.9'
array-vec = { version = '*', path = '../array-vec' }