[package]
name = "const-alg"
version = "0.1.1"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]
edition = "2018"
description = 'A library that provides a safe experimental linear algebra library based on arrays intead of on the heap'
license = 'MIT'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = '0.2.0'
cfg-if = '0.1.9'
array-vec = { version = '^0.1.0', path = '../array-vec' }